# R-ebirth

./: .gitignore  AGENTS.md  API-GRAMMAR.md  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  NOTICE  R-vs-Python-La-Rivoluzione-Definitiva.md  README.md  ROADMAP.md  SOLO-PHASE-PLAN.md  THESIS-PLAN.md  TRADEMARK.md  rust-toolchain.toml
.claude/agents/: architect.md  coder.md  doc-writer.md  reviewer.md  security-auditor.md  simplifier.md  test-engineer.md
.claude/skills/golden-update/: SKILL.md
.claude/skills/new-wp/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/vendor-bump/: SKILL.md
.github/workflows/: R-CMD-check.yaml  diag-simd-reduction.yaml  diag-vision-encoder-isa.yaml  nightly-demo-A.yaml  nightly-demo-B.yaml  nightly-memory-safety.yaml  nightly-model-tolerance.yaml  nightly-supply-chain.yaml  nightly-vision-golden.yaml  rust.yaml
docs/: README.md  anatomy-lab-quickstart.md  audit-wp-v1-mtmd-2026-07-14.md  full-review-2026-07-07.md  getting-started.md  phase11-vision-plan.md  simplifier-upgrade-and-punchlist-2026-07-07.md  wp-v3-embed-spike.md  wp1-plan.md  wp3-embed-plan.md  wp4-trace-plan.md  wp5-intervention-plan.md  wp7.5-model-matrix.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
rebirth/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  _pkgdown.yml
rebirth/R/: conditions.R  download.R  embed.R  extendr-wrappers.R  generate.R  images.R  intervene.R  llm.R  logits.R  tokens.R  trace-spill.R  trace.R  zzz.R
rebirth/inst/: models.csv
rebirth/inst/extdata/: abstracts-sample.csv
rebirth/man/: as.matrix.rebirth_trace.Rd  as.matrix.relm_trace.Rd  close.llm.Rd  llm.Rd  llm_ablate.Rd  llm_download.Rd  llm_embed.Rd  llm_generate.Rd  llm_logits.Rd  llm_steer.Rd  llm_tokens.Rd  llm_trace.Rd  summary.llm.Rd
rebirth/src/: Makevars.in  Makevars.win.in  entrypoint.c  rebirth-win.def  relm-win.def
rebirth/src/llama.cpp/: CMakeLists.txt  VENDORING.md
rebirth/src/llama.cpp/include/: llama.h
rebirth/src/llama.cpp/patches/: 0001-rebirth-wp5-ablation-intervene.diff  0002-rebirth-wp-v1-mtmd-library-build.diff  README.md  verify_vendored_tree.sh
rebirth/src/llama.cpp/src/: llama-adapter.cpp  llama-adapter.h  llama-context.cpp  llama-context.h  llama-graph.cpp  llama-graph.h
rebirth/src/llama.cpp/tools/mtmd/: CMakeLists.txt
rebirth/src/rust/: Cargo.toml  deny.toml  document.rs
rebirth/src/rust/rebirth-ffi/: Cargo.toml  document.rs
rebirth/src/rust/rebirth-ffi/src/: lib.rs
rebirth/src/rust/rebirth-llm/: Cargo.toml  build.rs
rebirth/src/rust/rebirth-llm/src/: embed.rs  engine.rs  error.rs  ffi.rs  generate.rs  intervene.rs  lib.rs  probe.rs  spill.rs  trace.rs  vision.rs
rebirth/src/rust/rebirth-llm/tests/: intervene_kl.rs  synthetic_embed.rs  synthetic_generate.rs  synthetic_intervene.rs  synthetic_logits.rs  synthetic_probe.rs  synthetic_spill.rs  synthetic_trace.rs  twin_pin_link_stems.rs  vlm_embed.rs  vlm_golden.rs
rebirth/tests/: testthat.R
rebirth/tests/perf/: trace-off-overhead.R
rebirth/tests/testthat/: helper-llm.R  test-boundary.R  test-conditions.R  test-llm-close.R  test-llm-download.R  test-llm-embed.R  test-llm-generate.R  test-llm-intervene.R  test-llm-load.R  test-llm-logits.R  test-llm-model.R  test-llm-print.R  test-llm-steer-valence.R  test-llm-synthetic.R  test-llm-tokens.R  test-llm-trace-golden.R  test-llm-trace-spill.R  test-llm-trace.R  test-llm-vision-embed.R  test-llm-vision.R  test-package.R
rebirth/tests/testthat/fixtures/: cpuinfo-aarch64.txt  cpuinfo-x86_64.txt  embed-similarity.csv  make-valence-direction.R  synthetic-llama-2l.gguf  valence-direction.csv  valence-lexicon.csv
rebirth/tools/: cmake.R  config.R
rebirth/vignettes/: anatomy-lab.qmd  topics-without-python.qmd  vision.qmd
rust/: Cargo.toml
rust/rebirth-ffi/: Cargo.toml
rust/rebirth-ffi/src/: lib.rs
rust/rebirth-llm/src/: lib.rs
tests/demos/: README.md  demo-A-anatomy-lab.R  demo-B-topics.R  demo-utils.R  fetch-abstracts.R  make-abstracts-sample.R
tests/llm-golden/: README.md  requirements.txt
tests/llm-golden/qwen/: README.md  reference_forward_hf.py  requirements-hf.txt
tests/llm-golden/qwen/goldens/: activations.f32  manifest.json
tests/llm-golden/reference/: README.md
tests/llm-golden/synthetic/: build_synthetic.py  reference_forward.py  synthetic_model.py
tests/llm-golden/synthetic/goldens/: activations.csv  activations.npy  embeddings.csv  embeddings.npy  greedy_continuation.csv  greedy_tokens.csv  intervene_ablate_logits.csv  intervene_ablate_logits.npy  intervene_both_logits.csv  intervene_both_logits.npy  intervene_steer_logits.csv  intervene_steer_logits.npy  intervene_steer_vector.csv  logits.csv  logits.npy  metadata.json
tests/llm-golden/vision/: README.md
tests/llm-golden/vision/goldens/: embed-red-square-mean.csv  embed-red-square-mean.csv.machine  encode-red-square-f32.txt  greedy-red-square-ids.txt  greedy-red-square.txt
tests/llm-golden/vision/tools/: compare-dumps.py  dump-encode.c
tests/valgrind/: rebirth.supp  relm.supp
tests/vision/: make-fixtures.R
