[package]
name = "rebirth-ffi"
description = "The R <-> Rust boundary for R-ebirth: the only crate allowed to hold unsafe, SEXP marshalling, index conversion, and condition mapping. WP0 placeholder; extendr wiring arrives in WP1."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rebirth-llm = { path = "../rebirth-llm" }
