# Native workspace for the `relm` R package (ADR D-005).
#
# Both native crates live here, inside the package, so `R CMD build`/`R CMD check`
# and CRAN builds are self-contained (ARCHITECTURE.md §9): no path escapes the
# package directory. `rebirth-ffi` is the extendr boundary (all unsafe, SEXP
# marshalling); `rebirth-llm` is the R-free engine wrapper (ARCHITECTURE.md §2).
[workspace]
resolver = "2"
members = ["rebirth-ffi", "rebirth-llm"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Alessandro Vadala"]

# Profiles apply only at the workspace root.
[profile.release]
lto = true
codegen-units = 1
