[package]
name = "rebirth-ffi"
description = "The R <-> Rust boundary for the rebirth package: the only crate holding unsafe, SEXP marshalling, index conversion, panic catching, and condition mapping (ARCHITECTURE.md §2)."
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version = "1.71"

# The R-loadable static library keeps the historical name `rebirth`, so the
# generated entrypoint (R_init_rebirth), NAMESPACE (useDynLib(rebirth, ...)),
# document.rs (rebirth::get_rebirth_metadata), and Makevars (-lrebirth) are all
# unchanged by the D-005 layout move.
[lib]
name = "rebirth"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "document"
path = "document.rs"

[features]
# Forward the engine's disk-spill feature (DECISIONS.md D-013). Default on, so the
# R package ships with `llm_trace(spill = TRUE)` functional; a
# `--no-default-features` build drops spill in both crates (no Arrow), keeping the
# no-spill configuration coherent end to end.
default = ["spill"]
spill = ["rebirth-llm/spill"]

[dependencies]
extendr-api = "0.9"
rebirth-llm = { path = "../rebirth-llm", default-features = false }
